--- a/CW2/Coursework_2_18145399.ipynb
+++ b/CW2/Coursework_2_18145399.ipynb
@@ -2056,7 +2056,7 @@
     "        ErrorMatrix| the test error rate for each given (C, Lmbda Lr) tuple when trained on (xTr,yTr) and tested on (xValid,yValid)\n",
     "    \"\"\"\n",
     "    # Define a list to store the classification errors for each hyperparameter combination\n",
-    "    error_matrix = []\n",
+    "    acc_matrix = []\n",
     "    \n",
     "    # Iterate over all possible combinations of hyperparameters\n",
     "    for C in CList:\n",
@@ -2070,17 +2070,17 @@
     "                acc = torch.mean((yValidPred == yValid).float())\n",
     "\n",
     "                # Store the classification accuracy for the current hyperparameter combination\n",
-    "                error_matrix.append(1 - acc)\n",
+    "                acc_matrix.append(acc)\n",
     "\n",
     "    # Find the hyperparameters with the lowest classification error\n",
-    "    best_idx = np.argmax(error_matrix)\n",
+    "    best_idx = np.argmax(acc_matrix)\n",
     "    bestC = CList[best_idx // (len(lmbdaList) * len(lrList))]\n",
     "    bestLmbda = lmbdaList[(best_idx // len(lrList)) % len(lmbdaList)]\n",
     "    bestLr = lrList[best_idx % len(lrList)]\n",
     "    \n",
     "    # Compute the error rate for each (C, Lmbda, Lr) tuple when trained on (xTr, yTr) and tested on (xValid, yValid)\n",
-    "    ErrorMatrix = np.reshape(error_matrix, (len(CList), len(lmbdaList), len(lrList)))\n",
-    "#     ErrorMatrix = 1 - error_matrix\n",
+    "    AccMatrix = np.reshape(acc_matrix, (len(CList), len(lmbdaList), len(lrList)))\n",
+    "    ErrorMatrix = 1 - AccMatrix\n",
     "    \n",
     "    return bestC, bestLmbda, bestLr, ErrorMatrix"
    ]
